samples/_failures_safe/1761074049_e810a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65046f11.c: In function ‘main’:
./samples/SAFE/__tmp_65046f11.c:196:20: error: missing terminating " character
  196 |             printf("Invalid event number. Must be
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_65046f11.c:196:13: error: expected expression at end of input
  196 |             printf("Invalid event number. Must be
      |             ^~~~~~
./samples/SAFE/__tmp_65046f11.c:196:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_65046f11.c:196:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_65046f11.c:196:13: error: expected declaration or statement at end of input
